package es.pbover.master.model.menu.option;

import es.pbover.master.model.ServicesContract;
import es.pbover.master.utils.date.Date;
import es.pbover.master.utils.io.Console;
import es.pbover.master.utils.io.DateDialog;

public class ShiftServicesContractOption extends ServicesContractOption {

    public ShiftServicesContractOption(ServicesContract servicesContract) {
        super("Desplazar Contrato de Servicios", servicesContract);
    }

    @Override
    public void interact() {
        Date date = new DateDialog().read(this.servicesContract.getYear());
        Double shiftment = Console.getInstance().readDouble("Introduzca el desplazamiento:");
        Console.getInstance().writeln();
        servicesContract.desplazar(date, shiftment);
    }

}
