@startuml
class ServicesContract
abstract class Menu
abstract class DynamicMenu
abstract class IterativeMenu
abstract class QuitMenu
class ServicesContractMenu
abstract class Option
abstract class ServicesContractOption
class CancelServicesContractOption
class CostServicesContractOption
class EnlargeServicesContractOption
class ListServicesContractOption
class PrintServicesContractOption
class QuitOption
class ShiftServicesContractOption
class Date
class Month
class Format
class Console

Option <|.. ServicesContractOption

ServicesContractOption <|.. CancelServicesContractOption
ServicesContractOption <|.. CostServicesContractOption
ServicesContractOption <|.. EnlargeServicesContractOption
ServicesContractOption <|.. ListServicesContractOption
ServicesContractOption <|.. PrintServicesContractOption 
ServicesContractOption <|.. QuitOption 
ServicesContractOption <|.. ShiftServicesContractOption 


abstract class Menu {
 - String title
 +interact()
 #{abstract} addOptions()
 #interact_()
 #showTitles()
 -showTitle()
 #execChoosedOption()
 #add(Option option)
 #removeOptions()
 #boolean hasOption(Option option)
}

abstract class QuitMenu {
 #showTitles()
 #addquitOption()
 #boolean isExecutedquitOption()
}

abstract class IterativeMenu {
 +interact()
}

abstract class DynamicMenu {
 +interact()
}

abstract class Option {
 +title
 +{abstract} interact()
 +showTitle(int index)
 #String getTitle()
}

abstract class QuitOption {
 +boolean executed
 +interact()
 +boolean isExecuted()
}

abstract class ServicesContractOption {
 #ServicesContract servicesContract
}

class CancelServicesContractOption
{
  +interact()
}

class CostServicesContractOption
{
  +interact()
}

class EnlargeServicesContractOption
{
  +interact()
}

class ListServicesContractOption
{
  +interact()
}
class PrintServicesContractOption
{
  +interact()
}
class ShiftServicesContractOption
{
  +interact()
}

QuitMenu --> QuitOption

Menu <|.. QuitMenu
QuitMenu <|.. IterativeMenu
IterativeMenu <|.. DynamicMenu
DynamicMenu <|.. ServicesContractMenu 
Option <|.. QuitOption

Menu o--"*" Option
ServicesContractMenu --> ServicesContract
ServicesContractOption --> ServicesContract

ServicesContract ..> Console
Menu ..> Console
CancelServicesContractOption ..> Console
CostServicesContractOption ..> Console
EnlargeServicesContractOption ..> Console
ListServicesContractOption ..> Console
Option ..> Console
ShiftServicesContractOption ..> Console
Interval ..> Console
Date ..> Console

ServicesContract *--> Interval

Date ..> Month
ServicesContract ..> Month

ServicesContract ..> Date
CancelServicesContractOption ..> Date
EnlargeServicesContractOption ..> Date
ShiftServicesContractOption ..> Date
Format ..> Date

Date ..> Format
Month ..> Format






@enduml